--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ certifi==2022.6.15
 cffi==1.15.0
 colorama==0.4.5
 cryptography==37.0.2
+et-xmlfile==1.1.0
 h11==0.13.0
 idna==3.3
 iniconfig==1.1.1
+openpyxl==3.0.10
 outcome==1.2.0
 packaging==21.3
 pluggy==1.0.0
